[package]
name = "ergonames"
version = "0.4.7"
edition = "2021"
description = "A SDK for interacting with ErgoNames using rust."
documentation = "https://zack-balbin.gitbook.io/ergonames/sdks/rust-sdk"
repository = "https://github.com/ergonames/ergo-names-rust-sdk"
readme = "README.md"
homepage = "https://ergonames.com/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest         = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
chrono = "0.4"